09 Admin/App Data/Noctyrium/Diagnostics/noctyrium_true_productivity_day_patch.2026-05-01_14-45-42.txt
===== NOCTYRIUM TRUE PRODUCTIVITY DAY PATCH =====
Version remains locked: v0.03.01

Swift backup:
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.before-true-productivity-day-patch.2026-05-01_14-45-42.swift

===== PRECHECK COMPILE =====
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:961:13: warning: variable 'lines' was never mutated; consider changing to 'let' constant
        var lines = raw.components(separatedBy: .newlines).filter { !$0.trimmingCharacters(in: .whitespaces).isEmpty }
        ~~~ ^
        let
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:2443:9: warning: initialization of immutable value 'nb3YoungOrBetter' was never used; consider replacing with assignment to '_' or removing it
    let nb3YoungOrBetter = nb3Core.filter { $0.quality >= 2 }
    ~~~~^~~~~~~~~~~~~~~~
    _
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:3074:25: warning: result of call to 'shell' is unused
                        shell("open \"\(prompt.fullPath)\"")
                        ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:3078:25: warning: result of call to 'shell' is unused
                        shell("open -R \"\(prompt.fullPath)\"")
                        ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Current source compiles.

===== PATCHING SWIFT =====

===== NORMALIZING OFFSET FILE =====

===== COMPILE TEST =====
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:216:13: error: expression is not assignable: function call returns immutable value
            max(0, stats.todayCards) = max(0, max(0, stats.todayCards))
            ^~~~~~~~~~~~~~~~~~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:220:9: error: expression is not assignable: function call returns immutable value
        max(0, stats.todayCards) = max(0, max(0, stats.todayCards) - delta)
        ^~~~~~~~~~~~~~~~~~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:386:19: error: cannot find 'nowStamp' in scope
        let now = nowStamp()
                  ^~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:412:44: error: cannot infer contextual base in reference to member 'utf8'
            if let data = row.data(using: .utf8) {
                                          ~^~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:963:13: warning: variable 'lines' was never mutated; consider changing to 'let' constant
        var lines = raw.components(separatedBy: .newlines).filter { !$0.trimmingCharacters(in: .whitespaces).isEmpty }
        ~~~ ^
        let
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:1062:83: error: cannot find 'nowStamp' in scope
        let text = "base_minutes,base_anki,updated\n\(safeMinutes),\(safeCards),\(nowStamp())\n"
                                                                                  ^~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:1063:86: error: cannot infer contextual base in reference to member 'utf8'
        try? text.write(toFile: productivityOffsetFile, atomically: true, encoding: .utf8)
                                                                                    ~^~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:1078:9: error: expression is not assignable: function call returns immutable value
        max(0, stats.todayCards) = max(0, max(0, stats.todayCards) + 20)
        ^~~~~~~~~~~~~~~~~~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:2495:9: warning: initialization of immutable value 'nb3YoungOrBetter' was never used; consider replacing with assignment to '_' or removing it
    let nb3YoungOrBetter = nb3Core.filter { $0.quality >= 2 }
    ~~~~^~~~~~~~~~~~~~~~
    _
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:3128:25: warning: result of call to 'shell' is unused
                        shell("open \"\(prompt.fullPath)\"")
                        ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:3132:25: warning: result of call to 'shell' is unused
                        shell("open -R \"\(prompt.fullPath)\"")
                        ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Compile failed. Restoring backup.
Restored: /Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.before-true-productivity-day-patch.2026-05-01_14-45-42.swift
Report: /Users/jd/Medical School/09 Admin/App Data/Noctyrium/Diagnostics/noctyrium_true_productivity_day_patch.2026-05-01_14-45-42.txt
